# LightYears

LightYearsEngine/: CMakeLists.txt  CMakeLists_old.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  Core.h  Object.h  World.h
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  Object.cpp  World.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
src/: main.cpp
src/framework/: Application.cpp
